<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:paddingTop="30dp">


                <EditText
                    android:id="@+id/et_Title"
                    style="@style/et_transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:text="@string/et_description_title"
                    android:textStyle="bold"
                    android:textSize="30sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:paddingTop="30dp">

                <EditText
                    android:id="@+id/et_app_description"
                    style="@style/et_transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/et_app_description"
                    android:textSize="20sp" />


                <EditText
                    android:id="@+id/et_presence_description_1"
                    style="@style/et_transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/et_presence_description"
                    android:layout_below="@+id/et_app_description"
                    android:textSize="20sp" />
                <EditText
                    android:id="@+id/et_presence_description_2"
                    style="@style/et_transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/et_fall_title"
                    android:layout_below="@+id/et_presence_description_1"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <ImageView
                    android:id="@+id/et_presence_alert_1"
                    android:layout_width="match_parent"
                    android:layout_height="167dp"
                    android:layout_below="@+id/et_presence_description_2"
                    android:src="@drawable/fall" />
                <EditText
                    android:id="@+id/et_presence_description_3"
                    style="@style/et_transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/et_presence_title"
                    android:layout_below="@+id/et_presence_alert_1"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <ImageView
                    android:id="@+id/et_presence_alert_2"
                    android:layout_width="match_parent"
                    android:layout_height="167dp"
                    android:layout_below="@+id/et_presence_description_3"
                    android:src="@drawable/movement" />
                <EditText
                    android:id="@+id/et_presence_description_4"
                    style="@style/et_transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/et_no_presence_title"
                    android:layout_below="@+id/et_presence_alert_2"
                    android:textStyle="bold"
                    android:textSize="20sp"/>


                <ImageView
                    android:id="@+id/et_presence_alert_3"
                    android:layout_width="match_parent"
                    android:layout_height="167dp"
                    android:layout_below="@+id/et_presence_description_4"
                    android:layout_marginTop="-1dp"
                    android:src="@drawable/no_movement" />

                <EditText
                    android:id="@+id/et_temperature_description_1"
                    style="@style/et_transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/et_temperature_description"
                    android:layout_below="@+id/et_presence_alert_3"
                    android:textSize="20sp" />
                <EditText
                    android:id="@+id/et_temperature_description_2"
                    style="@style/et_transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/et_temperature_title"
                    android:layout_below="@+id/et_temperature_description_1"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
                <ImageView
                    android:id="@+id/et_image_alert_1"
                    android:layout_width="match_parent"
                    android:layout_height="167dp"
                    android:layout_below="@+id/et_temperature_description_2"
                    android:src="@drawable/temperature" />



                <EditText
                    android:id="@+id/et_tap_control_description_1"
                    style="@style/et_transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/et_tap_control_description"
                    android:layout_below="@+id/et_image_alert_1"
                    android:textSize="20sp" />
                <EditText
                    android:id="@+id/et_tap_control_description_2"
                    style="@style/et_transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/et_tap_control_title"
                    android:layout_below="@+id/et_tap_control_description_1"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
                <ImageView
                    android:id="@+id/et_tap_control_image_1"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_below="@+id/et_tap_control_description_2"
                    android:src="@drawable/tap_control" />

                <EditText
                    android:id="@+id/et_pills_calendar_description_1"
                    style="@style/et_transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/et_pills_description"
                    android:layout_below="@+id/et_tap_control_image_1"
                    android:textSize="20sp" />
                <EditText
                    android:id="@+id/et_pills_calendar_description_2"
                    style="@style/et_transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/et_pills_title"
                    android:layout_below="@+id/et_pills_calendar_description_1"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
                <ImageView
                    android:id="@+id/et_pills_calendar_image_1"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_below="@+id/et_pills_calendar_description_2"
                    android:src="@drawable/pills_calendar" />

                <EditText
                    android:id="@+id/et_pills_calendar_description_3"
                    style="@style/et_transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/et_add_title"
                    android:layout_below="@+id/et_pills_calendar_image_1"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
                <ImageView
                    android:id="@+id/et_pills_calendar_image_2"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:layout_below="@+id/et_pills_calendar_description_3"
                    android:src="@drawable/add_calendar" />

                <EditText
                    android:id="@+id/et_pills_calendar_description_4"
                    style="@style/et_transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/et_config_pills_title"
                    android:layout_below="@+id/et_pills_calendar_image_2"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
                <ImageView
                    android:id="@+id/et_pills_calendar_image_3"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_below="@+id/et_pills_calendar_description_4"
                    android:src="@drawable/config_calendar" />
                <EditText
                    android:id="@+id/et_pills_calendar_description_5"
                    style="@style/et_transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/et_save_config_pills_title"
                    android:layout_below="@+id/et_pills_calendar_image_3"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
                <ImageView
                    android:id="@+id/et_pills_calendar_image_4"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:layout_below="@+id/et_pills_calendar_description_5"
                    android:src="@drawable/save_calendar" />


            </RelativeLayout>


        </LinearLayout>
    </ScrollView>
</FrameLayout>