<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="70"
        android:paddingTop="20dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_user_account"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="30"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:orientation="vertical"
        >
        <EditText
            android:paddingTop="30dp"
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/et_user_title"
            android:gravity="center"
            android:textSize="40sp"
            style="@style/et_transparent"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="100"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/et_email_title"
                    android:id="@+id/et_email_profile"
                    style="@style/et_transparent"/>
                <EditText
                    android:paddingTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_email_user"
                    android:text="@string/et_email"
                    android:layout_below="@+id/et_email_profile"
                    android:textSize="@dimen/tamany_lletra"
                    style="@style/et_transparent"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="50">
                <Button
                    android:id="@+id/btn_close_sesion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/btn_log_out"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:background="@drawable/btn_rounded_green"
                    android:layout_weight="60"/>
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>